# autify

./: README.md  pyproject.toml
src/: app.py
src/api/: api.py
src/config/: settings.py
src/spotify/: api.py  headers.py
src/spotify/schemas/: artists.py  playlists.py  search.py  tracks.py
